--- a/html/testimonial.html
+++ b/html/testimonial.html
@@ -22,7 +22,7 @@
       
       <div>
           <ul class="mon-menu">
-             <li><a href="index.html">Home</a></li>
+             <li><a href="../index.html">Home</a></li>
              <li><a href="../html/reservation.html">Reservation</a></li>
              <li><a href="../html/testimonial.html">Testimonials</a></li>
              <li><a href="../html/contact.html">Contact</a></li> 
