--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="../fontawesome/all.min.css">
-    <link href="../css/styles.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
     <script src="jquery-3.6.0.js" type="text/javascript"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -23,13 +23,13 @@
 
         <header>
         <div class="font-bars"><i id="font-bars" class="fas fa-bars"></i></div>
-            <div class="monlogo"><a href="../html/index.html"><img src="../img/logo-hotel.jpg"></a></div>
+            <div class="monlogo"><a href="index.html"><img src="img/logo-hotel.jpg"></a></div>
     
               <ul class="mon-menu">
                  <li><a href="#">Home</a></li>
-                 <li><a href="../html/reservation.html">Reservation</a></li>
-                 <li><a href="../html/testimonial.html">Testimonials</a></li>
-                 <li><a href="../html/contact.html">Contact</a></li> 
+                 <li><a href="html/reservation.html">Reservation</a></li>
+                 <li><a href="html/testimonial.html">Testimonials</a></li>
+                 <li><a href="html/contact.html">Contact</a></li> 
              </ul>
          </header>
      
@@ -64,7 +64,7 @@
             <div class="utensil">
 
                 <div class="image-utensil">
-                    <img src="../img/frite.jpeg" alt="utensils">
+                    <img src="img/frite.jpeg" alt="utensils">
                 </div>
                 <div class="utensil-description" data-aos="flip-left"
                 data-aos-easing="ease-out-cubic"
@@ -94,7 +94,7 @@
                     Mirror, Bathroom amenities, Open bathroom, Hair dryer in bathroom, Beauty mirror, Bidet
                 </div>
                 <div class="image-utensil">
-                    <img src="../img/matela-lit.jpeg"
+                    <img src="img/matela-lit.jpeg"
                         alt="utensils">
                 </div>
             </div>
@@ -105,7 +105,7 @@
             <div class="utensil">
 
                 <div class="image-utensil">
-                    <img src="../img/room-meet.jpeg" alt="utensils">
+                    <img src="img/room-meet.jpeg" alt="utensils">
                 </div>
                 <div class="utensil-description" data-aos="flip-left"
                 data-aos-easing="ease-out-cubic"
@@ -136,7 +136,7 @@
                     far with the use of chemicals, especially with chlorine
                 </div>
                 <div class="image-utensil">
-                    <img src="../img/piscine.jpeg"
+                    <img src="img/piscine.jpeg"
                         alt="utensils">
                 </div>
             </div>
