--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="../fontawesome/all.min.css">
+    <link rel="stylesheet" href="fontawesome/all.min.css">
     <link href="css/styles.css" rel="stylesheet">
-    <script src="jquery-3.6.0.js" type="text/javascript"></script>
+    <script src="html/jquery-3.6.0.js" type="text/javascript"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </head>
 
-<body class="works_on_smartphone">
+<body >
     
    
     <div id="hotel-describe">
